fix button alignment

--- a/finalmain.css
+++ b/finalmain.css
@@ -24,5 +24,22 @@ button {
 }
 
 #dine {
+  position: relative;
+  right: 70px;
+  top: 15px;
+  bottom: 10px;
+}
 
+#out {
+  position: relative;
+  left: 55px;
+  bottom: 44px;
+}
+
+#about {
+  position: relative;
+
+}
+#us {
+  position: relative;
 }
